[package]
name = "bb8-skytable"
version = "0.2.0"
authors = [
	"Nils Kanevad <nils@kanevad.se>"
]
edition = "2018"
description = "Async bb8 connection pool for Skytable"
repository = "https://github.com/heliumbrain/bb8-skytable"
license = "MIT"
readme = "README.md"

[dependencies]
bb8 = "0.7"
async-trait = "0.1"
skytable = { version = "0.6.0", features= ["async"] }

[dev-dependencies]
futures-util = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
